--- a/docs/Proposals/2019-05-26/01.PRD.md
+++ b/docs/Proposals/2019-05-26/01.PRD.md
@@ -1,17 +1,23 @@
-# 要件定義書
+# Product Requirements Document
+
+## Authors
+
++ Lyrise
 
 ## 解決したい課題
 
 ### スマホからPCのファイルを管理 & 閲覧したい。
 
-+ SMB経由の方法では、閲覧速度に問題がある。
-+ クラウドにファイルを保持する方法は、セキュリティ上の懸念が払拭できない。
++ SMB経由ではファイルの表示が遅い。
++ クラウドにファイルを保持するとデータが流出する恐れがある。
 
 ## 課題解決の方法
 
 ### 独自プロトコルのファイルサーバーを新たに実装する。
 
++ 自宅で手軽にファイルサーバーを運用できるようにする。
 + 負荷の高い処理をファイルサーバーに任せ、スマホ側には閲覧に必要なデータのみ送信する。
 + サムネイル画像等はファイルサーバーで生成する。
 + Zipファイル等はファイルサーバーで展開する。
 + 動画はサーバー側でスマホで再生できるよう変換して送信する。
++ 必要であれば、NAT越えのための中継サーバーを利用できるように実装する。
